cabal-version:      2.4
name:               tempConverter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             baezus
maintainer:         elias@baez.us

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
                    README.md

executable tempConverter
    main-is:          Main.lhs
    default-extensions:
      OverloadedStrings
      RecursiveDo
      LambdaCase
      ScopedTypeVariables

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , reflex
                    , reflex-vty 
                    , text 
                    , vty 
    default-language: Haskell2010
    ghc-options: -pgmL markdown-unlit -Wall -threaded 
    build-tool-depends: markdown-unlit:markdown-unlit -any 
